# EPIC_FHIR

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_env.py  docker-compose.yml  epic  export_to_csv.py  foundry.yml  foundry_pull_instructions.md  json  key.md  package-lock.json  package.json  pyproject.toml  quick_test.py  requirements.txt  test_fhir_transform.py  transform_and_fix_fhir_validation.py
Todo/: dataplan.md  (+5 more)
backups/EPIC_FHIR_Production/: Makefile  README.md  pyproject.toml
backups/EPIC_FHIR_Production/epic_fhir_integration/: __init__.py  constants.py
backups/EPIC_FHIR_Production/functions/: epic-fhir-extract.yaml  epic-fhir-quality.yaml  epic-fhir-transform.yaml
epic_fhir_production_unified/: .foundryci.yaml  IMPROVEMENTS.md  ORGANIZATION_SUMMARY.md  README.md  WORKFLOW_README.md  foundry.yml  project.json  pyproject.toml
epic_fhir_production_unified/.github/workflows/: ci.yml
epic_fhir_production_unified/backups/: fhir_dataset.py.production
epic_fhir_production_unified/config/: epic_fhir_settings.yaml
epic_fhir_production_unified/dashboards/: monitoring_dashboard.json
epic_fhir_production_unified/datasets/: Condition_Clean_Silver.yml  Condition_GE_Results.yml  Condition_Raw_Bronze.yml  Encounter_Clean_Silver.yml  Encounter_GE_Results.yml  Encounter_Raw_Bronze.yml  Observation_Clean_Silver.yml  Observation_GE_Results.yml  Observation_Raw_Bronze.yml  Patient_Clean_Silver.yml  Patient_GE_Results.yml  Patient_Narrative_LLM.yml  Patient_Raw_Bronze.yml  Patient_Timeline_Gold.yml  Patient_Validation_Silver.yml
epic_fhir_production_unified/datasets/bronze/: MedicationRequest_Raw_Bronze.yml
epic_fhir_production_unified/datasets/silver/: MedicationRequest_Clean_Silver.yml
epic_fhir_production_unified/dev/: start.sh
epic_fhir_production_unified/docs/: CODEBASE_REVIEW.md  DATA_QUALITY_ASSESSMENT_PLAN.md  REAL_WORLD_TESTING_TODO.md  SETUP.md  TESTING_STATUS.md  api.md  architecture.md  performance_optimization_guidelines.md  production_guidelines_5_20.md  production_testing_guide.md  troubleshooting.md
epic_fhir_production_unified/docs/adr/: 0001-use-layered-architecture.md
epic_fhir_production_unified/legacy_src/: README.md
epic_fhir_production_unified/legacy_src/epic_fhir_integration/: __init__.py
epic_fhir_production_unified/scripts/: direct_fhir_test.py  fetch_patient_data.py  fhir_resources_prototype.py  fix_absolute_paths.py  gcp_setup.sh  gen_coverage.sh  production_test.py  qa_checklist.py  refresh_epic_token.py  rename_legacy_src.sh  run_all_tests.sh  run_data_validation.py  run_integration_tests.sh  run_real_world_tests.sh  run_tests_productuin.sh  run_with_fresh_token.sh  run_with_token_refresh.sh  setup_auth.sh  setup_dev.sh  setup_fhir_validator.py  setup_great_expectations.py  standalone_fhir_test.py  test_epic_auth.py  test_fhir_tools.py  test_strict_mode.py  test_validation.py
epic_fhir_production_unified/tests/: __init__.py  conftest.py  test_fhir_client.py  test_import_all.py
epic_fhir_production_unified/tests/_stubs/: transforms_api_stub.py
epic_fhir_production_unified/tests/data/: mock_patient_response.json  sample_patient_bundle.json
epic_fhir_production_unified/tests/fixtures/: sample_encounter.json  sample_observation.json  sample_patient.json
epic_fhir_production_unified/tests/integration/: test_extractor.py  test_patient_narrative.py  test_transform_end_to_end.py
epic_fhir_production_unified/tests/live/: test_epic_sandbox_extract.py  test_fhirpath_live.py  test_resource_coverage.py
epic_fhir_production_unified/tests/perf/: test_fhirpath_performance.py
epic_fhir_production_unified/tests/unit/: test_auth.py  test_codeable_concept.py  test_data_quality.py  test_fhir_resource_schemas.py  test_fhir_resources.py  test_metrics_collector.py  test_new_jwt_auth.py  test_pathling_service.py  test_patient_transform.py  test_quality_interventions.py  test_secret_store.py
epic_fhir_production_unified/transforms-python/: README.md  conda_recipe.yml  setup.py
epic_fhir_production_unified/transforms-python/tests/: __init__.py  (+1 more)
(+1061 files in other folders)
